[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/base/ScreenManager.gd" type="Script" id=1]
[ext_resource path="res://assets/music/jonsong3.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/music/jonsong2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/music/jonsong.wav" type="AudioStream" id=4]

[node name="ScreenManager" type="Node2D"]
script = ExtResource( 1 )

[node name="Music" type="Node" parent="."]

[node name="IntroMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 4 )

[node name="FailMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 3 )

[node name="WinMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 2 )
